added css edited index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 <head>
 	<title>Happy this works</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 		<ul>
 			<li>Anu</li>
 			<li>Neha</li>
-			<li>Leena</li>
+			<li>Riya</li>
+            <li>Anu</li>
 
 		</ul>
 
